Pushed latest update.

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,3 +1,4 @@
 $bkgdBlue: hsla(212, 44%, 41%, 0.856);
 $mainWhite: ghostwhite;
-$bkgdfuschia: #c241b7;
+$bkgdfuschia: #c42ab796;
+$bordfuschia: #d84fcd96;
