--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,5 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     color: hsl(0, 3%, 31%);
 }
 
@@ -8,3 +13,7 @@ img {
     height: auto;
 }
 
+p {
+    letter-spacing: 1px;
+    line-height: 1.3;
+}
