Worked at styling the page.

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -2,3 +2,6 @@ $bkgdBlue: hsla(212, 44%, 41%, 0.856);
 $mainWhite: ghostwhite;
 $bkgdfuschia: #c42ab796;
 $bordfuschia: #d84fcd96;
+$logo-clr: hsla(214, 44%, 11%, 0.856);
+$headline-clr: hsl(0, 1%, 17%);
+$font-clr: hsl(0, 3%, 31%);
