--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -5,5 +5,12 @@
 @import "modules/_large-hero";
 @import "modules/_btn";
 @import "modules/_wrapper";
+@import 'modules/_header';
+@import "modules/_feature-item";
+@import "modules/_banner";
+@import "modules/_rows";
+@import "modules/_generic-content-container";
+@import "modules/_headline";
+
 
 
