--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,4 +1,12 @@
 .wrapper {
+    overflow: hidden;
     padding-left: 22px;
     padding-right: 22px;
+    max-width: 1236px;
+    margin-left: auto;
+    margin-right: auto;
+
+    
+
+
 }
