--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -1,8 +1,8 @@
-.svgtek-banner {
+.banner {
     background-image: linear-gradient(
       -25deg,
       hsla(73, 98%, 59%, 0.548) 27%,
       hsl(49, 95%, 76%)
     );
-  height: 9vh;
+  height: 7vh;
 }
