--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -3,7 +3,7 @@
     p {
         font-weight: 300;
         line-height: 1.65;
-        margin: 0 4em 1.8rem 0;
+        margin: 0 4em 1.8rem 5px;
 
         @mixin atSmall {
             font-size: 1.125rem;
