--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -11,6 +11,8 @@
 @import "modules/_rows";
 @import "modules/_generic-content-container";
 @import "modules/_headline";
+@import "modules/_testimonials";
+@import "modules/_page-section";
 
 
 
