--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -2,16 +2,6 @@
     
 }
 
-
-#features {
-    background-image: linear-gradient(
-        -45deg,
-        hsla(48, 17%, 88%, 0.829)2%,
-        hsla(190, 24%, 90%, 0.788)
-      );
-    height: auto;   
-}
-
-.max-width {
+.max-width {   /* webpack watchn width */
   max-width: 100px;
 }
