--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,8 +1,8 @@
 .headline {
-    font-weight: 300;
-    font-size: 1.175rem;
     color: $headline-clr;
-  
+    font-size: 1.2rem;
+    font-weight: 400;
+    
 
     @mixin atSmall {
         font-size: 1.375rem;
@@ -12,7 +12,6 @@
     &--centered {
         text-align: center;
     }
-
 
     &--small {
         font-size: 1.2rem;
@@ -43,6 +42,10 @@
 
     &--no-t-margin {
         margin-top: 0;
+    }
+
+    &--yes-l-padd {
+        padding-left: 2em;
     }
 }
 
