--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,12 +1,35 @@
 .page-section {
-    padding: 1em 0;
+    padding: 1.3em 0;
 
-        &--gray {
+        &--bkgd-lt-grn {
             background-image: linear-gradient(
                 -45deg,
-                hsla(73, 25%, 82%, 0.904) 27%,
+                hsla(128, 25%, 82%, 0.904) 7%,
                 hsl(159, 40%, 89%));
             height: auto; 
         }
+
+        &__banner {
+            background-image: linear-gradient(
+              -90deg,
+              hsl(159, 40%, 89%) 3%,
+              hsl(197, 87%, 39%) 95%);
+          height: 3.9vh;
+          
+        }
+        
+        /* 
+        hsla(73, 98%, 59%, 0.548) 27% 
+        hsl(49, 95%, 76%)
+        */
+
+        @mixin atSmall {
+            padding: 1em;
+        }
+
+        @mixin atMedium {
+            padding:;
+        }
     
 }
+
