set up responsive images.

--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -27,5 +27,16 @@
 .our-beginning {
     max-width: 54em;
     width: 100%;
+    
+
+    @mixin atSmall {
+        margin: 1em;
+    }
+
+    @mixin atMedium {
+        margin: 2em;
+    }
+
+
 }
 
