--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -14,7 +14,13 @@ img {
     height: auto;
 }
 
+
 p {
+    /*font size: defaults to 1rem or 16px*/
     letter-spacing: 1px;
     line-height: 1.3;
+}
+
+a {
+    color: $bkgdBlue;
 }
