--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -1,7 +1,7 @@
 @import 'normalize.css';
-@import "base/_global";
 @import "base/_variables";
 @import "base/_mixins";
+@import "base/_global";
 @import "modules/_large-hero";
 @import "modules/_btn";
 @import "modules/_wrapper";
@@ -10,8 +10,9 @@
 @import "modules/_rows";
 @import "modules/_generic-content-container";
 @import "modules/_headline";
-@import "modules/_testimonials";
 @import "modules/_page-section";
+@import "modules/_mygit";
+@import "modules/_bkgd-grad-blue";
 
 
 
